--- a/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots_Streamline.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots_Streamline.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -25,17 +25,17 @@
    },
    "outputs": [],
    "source": [
-    "assembly_name = \"CG_l1_25_c98_H\"\n",
+    "assembly_name = \"CG_L1_L2_refgen_001\"\n",
     "filter_biall = \"TRUE\"\n",
-    "filter_MAF = \"TRUE\"\n",
-    "dir_outfiles = \"/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c98_H_outfiles/\"\n",
-    "date = \"20170713\"\n",
-    "plot_subtitle = \"98%\""
+    "filter_MAF = \"FALSE\"\n",
+    "dir_outfiles = \"/mnt/hgfs/Moved_bioinformatics_files/CRAGIG_RUNS_12_py/CG_L1_L2_refgen_001_outfiles/\"\n",
+    "date = \"20170829\"\n",
+    "plot_subtitle = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -46,8 +46,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of individuals after adding fpop = 28.0\n",
-      "Number of loci = 12511\n"
+      "Number of individuals after adding fpop = 141.0\n",
+      "Number of loci = 1\n"
+     ]
+    },
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: 'Fis_CG_L1_L2_refgen_001_biall_NOmaf_oneSNP_inames_fpop_20170829.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-7c4cffdfdaa3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[0;31m# make Fis plot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 230\u001b[0;31m \u001b[0mfis_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfis_filename\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m \u001b[0mfis_file_lines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfis_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[0mfis_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'Fis_CG_L1_L2_refgen_001_biall_NOmaf_oneSNP_inames_fpop_20170829.txt'"
      ]
     }
    ],
