updated NBs, added script for pop ID to str files

--- a/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_2_with_refgen.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_2_with_refgen.ipynb
@@ -263,7 +263,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Naming of chromosomes and loci strange with reference genome assembly\n",
     "\n",
@@ -271,15 +274,16 @@
     "\n",
     "Not sure why, but in this assembly, my first with a reference genome, all of my loci have the same name (10_0), which makes no sense to me. Going to check that it's not the reference genome.\n",
     "\n",
-    "![img]()\n",
-    "![img]()"
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/weird_vcf1.png?raw=true)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -298,7 +302,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -317,7 +323,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -353,9 +361,218 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Appears normal. Must be during the production of the VCF file in ipyrad.\n",
+    "\n",
+    "Just heard from a peer that it might be due to a bug in ipyrad that got fixed. Just updated to the newest version (on 20170829)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ipyrad 0.7.12\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ipyrad -v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Adding arbitrary names worked, but also, Jay thinks it's an ipyrad version problem so I'm rerunning the assembly with the new version over night.\n",
+    "\n",
+    "**20170830**\n",
+    "\n",
+    "Ha! Updating the newest version solved the problem!\n",
+    "\n",
+    "Ha, new problem.\n",
+    "\n",
+    "![img](https://media1.giphy.com/media/zvBuF2oYRErVS/200.webp#3-grid1)\n",
+    "\n",
+    "The R script isn't running correctly, so I tried running it manually in R Studio and I get an error like this:\n",
+    "\n",
+    "```\n",
+    "length of 'dimnames' [2] not equal to array extent\n",
+    "```\n",
+    "\n",
+    "Which I think means that the number of locus names is different to the number of columns in the structure file. Going to check that manually now..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/Moved_bioinformatics_files/CRAGIG_RUNS_12_py/CG_L1_L2_refgen_001_outfiles/new_outfiles\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/Moved_bioinformatics_files/CRAGIG_RUNS_12_py/CG_L1_L2_refgen_001_outfiles/new_outfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "structure = open(\"CG_L1_L2_refgen_001_arbnames_biall_NOmaf_oneSNP_inames_fpop.str\",\"r\")\n",
+    "str_lines = structure.readlines()\n",
+    "\n",
+    "str_header = str_lines[0]\n",
+    "str_genlines = str_lines[1:]\n",
+    "\n",
+    "structure.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Header has 11388 loci in the header\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Header has \" + str(len(str_header.strip().split())) + \" loci in the header\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file has 11386 gneotypes\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"The file has \" + str((len(str_header.strip().split()))-2) + \" gneotypes\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Appears normal. Must be during the production of the VCF file in ipyrad."
+    "Ahh. Just realized it was reading an old input file. I deleted all the old ones, reran, and now all makes sense. Now I need to add population ID numbers to the structure file. Writing a script to do that now. Testing the script below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_combined_lanes/Scripts\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_combined_lanes/Scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: add_popIDs_to_str_files.py [-h] -i INFILE -p POPFILE -o OUTFILE\r\n",
+      "\r\n",
+      "Add population numbers to structure files from ipyrad\r\n",
+      "\r\n",
+      "optional arguments:\r\n",
+      "  -h, --help            show this help message and exit\r\n",
+      "  -i INFILE, --infile INFILE\r\n",
+      "                        input structure file that needs population numbers\r\n",
+      "                        intsead of arbitrary 1s in second column\r\n",
+      "  -p POPFILE, --popfile POPFILE\r\n",
+      "                        population assignment file from ipyrad\r\n",
+      "  -o OUTFILE, --outfile OUTFILE\r\n",
+      "                        new structure file with population numbers in second\r\n",
+      "                        column\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python add_popIDs_to_str_files.py -h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!python add_popIDs_to_str_files.py -i ../../../../Moved_bioinformatics_files/CRAGIG_RUNS_12_py/CG_L1_L2_refgen_001_outfiles/new_outfiles/CG_L1_L2_refgen_001_biall_NOmaf_oneSNP_inames.str \\\n",
+    "-o ../../../../Moved_bioinformatics_files/CRAGIG_RUNS_12_py/CG_L1_L2_refgen_001_outfiles/new_outfiles/CG_L1_L2_refgen_001_biall_NOmaf_oneSNP_inames_pops.str \\\n",
+    "-p ../../../../Moved_bioinformatics_files/CRAGIG_RUNS_12_py/popmap_cragig012.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It worked!\n",
+    "\n",
+    "Now to try and run the DAPC code."
    ]
   },
   {
