--- a/CRAGIG_combined_lanes/Notebooks/Comparing_HWE_filtering_methods.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Comparing_HWE_filtering_methods.ipynb
@@ -20,9 +20,11 @@
     "\n",
     "#### DAPCs\n",
     "\n",
+    "I generate random colors from a pallette, so unfortunately not all the colors match across DAPCs.\n",
+    "\n",
     "![dapc](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/CG_allR_1M_002_biall_maf_oneSNP_inames_post_HWEchi_DAPC.png?raw=true)\n",
     "\n",
-    "![dapc](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/CG_allR_1M_002_biall_maf_oneSNP_inames_wpops_DAPC.png?raw=true)\n",
+    "![dapc](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/CG_allR_1M_002_biall_maf_oneSNP_inames_wpops_DAPC_corrnames.png?raw=true)\n",
     "\n",
     "![dapc](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/CG_allR_1M_002_biall_maf_oneSNP_inames_wpops_fHWE_DAPC.png?raw=true)"
    ]
