updated NB with table

--- a/CRAGIG_combined_lanes/Notebooks/Comparing_HWE_filtering_methods.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Comparing_HWE_filtering_methods.ipynb
@@ -18,6 +18,15 @@
     "\n",
     "(3) Charlie uses a multiple corrections test that generates a false discovery rate to calculate qvalues of significance per locus in each population. I removed loci if their qvalue was <0.05 in at least half of the populations.\n",
     "\n",
+    "\n",
+    "#### Percent loci filtered out \n",
+    "\n",
+    "Similar to my sea cucumber data, Charlie's method and Jon Puritz's method filter pretty much no loci out of my data set, whereas Mary's method filters out the majority.\n",
+    "\n",
+    "![table](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/comp_HWE_filtering_numlocilost.png?raw=true)\n",
+    "\n",
+    "\n",
+    "\n",
     "#### DAPCs\n",
     "\n",
     "I generate random colors from a pallette, so unfortunately not all the colors match across DAPCs.\n",
@@ -28,13 +37,6 @@
     "\n",
     "![dapc](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/CG_allR_1M_002_biall_maf_oneSNP_inames_wpops_fHWE_DAPC.png?raw=true)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
