updated filtering nb, removed others bc linked to cuke repo instead

--- a/2_assembly_genotyping_and_filtering/filtering.ipynb
+++ b/2_assembly_genotyping_and_filtering/filtering.ipynb
@@ -20,6 +20,8 @@
     "Retained indivduals with a maximum of 30% missing data (all).\n",
     "\n",
     "Filtered for one SNP per RAD tag and removed SNPs if out of HWE.\n",
+    "\n",
+    "Most filtering steps are achieved with ``vcftools``, although I have some custom filtering scripts that work on genepop files. So I did switch to genepop using ``PGD Spider`` and the final file is a genepop file.\n",
     "\n"
    ]
   },
@@ -43,7 +45,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -139,7 +146,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -203,7 +215,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -312,6 +329,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get min, max, and mean missing data per individual."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -330,6 +354,13 @@
     "print(np.min(list(ind_md_dict.values())))\n",
     "print(np.max(list(ind_md_dict.values())))\n",
     "print(np.mean(list(ind_md_dict.values())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See how many individuals will be removed if we use a threshold of max 30% missing data."
    ]
   },
   {
@@ -362,9 +393,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's not too many! Remove using ``vcftools``"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -419,13 +462,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **[5]** MD and MAF per locus, then filter"
+    "### **[5]** MD and MAF per locus, then filter\n",
+    "\n",
+    "Now look at missing data per locus."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -543,7 +593,12 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -585,35 +640,6 @@
    ],
    "source": [
     "!vcftools --vcf primSNPs_CGmox_noINDL_mac5_mQ20_mDP10_289i.recode.vcf --freq "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m\u001b[01;32mFiltering.ipynb\u001b[0m*\n",
-      "\u001b[01;32mout.frq\u001b[0m*\n",
-      "\u001b[01;32mout.imiss\u001b[0m*\n",
-      "\u001b[01;32mout.lmiss\u001b[0m*\n",
-      "\u001b[01;32mout.log\u001b[0m*\n",
-      "\u001b[01;32mprimSNPs_CGmox_noINDL_mac5_mQ20_mDP10_289i.log\u001b[0m*\n",
-      "\u001b[01;32mprimSNPs_CGmox_noINDL_mac5_mQ20_mDP10_289i.recode.vcf\u001b[0m*\n",
-      "\u001b[01;32mprimSNPs_CGmox_noINDL_mac5_mQ20_mDP10.log\u001b[0m*\n",
-      "\u001b[01;32mprimSNPs_CGmox_noINDL_mac5_mQ20_mDP10.recode.vcf\u001b[0m*\n",
-      "\u001b[01;32mprimSNPs_CGmox_noINDL.vcf\u001b[0m*\n",
-      "\u001b[01;32mTotalRawSNPs_CGmox_noINDL.log\u001b[0m*\n",
-      "\u001b[01;32mTotalRawSNPs_CGmox_noINDL.recode.vcf\u001b[0m*\n",
-      "\u001b[01;32mTotalRawSNPs_CGmox.vcf\u001b[0m*\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
    ]
   },
   {
@@ -683,7 +709,12 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -739,29 +770,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **[6]** Convert to Genepop for last filtering steps\n",
+    "### **[6]** HWE filtering\n",
     "\n",
-    "- convert to Genepop with PGD Spider: DONE\n",
-    "- add informative names using notebook (add \"inam\"): DONE\n",
-    "- manually remove reps and add \"pops\" (add \"noreps\") :DONE\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **[7]** HWE filtering\n",
-    "\n",
-    "I converted the VCF to a genepop using PGD Spider so that I could use [this notebook]() to identify SNPs out of HWE.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **[8]** One SNP per RAD tag\n",
-    "\n",
-    "Pick one SNP per contig, one with highest MAF\n"
+    "I converted the VCF to a genepop using PGD Spider so that I could use [this notebook](https://github.com/nclowell/RAD_scallops/blob/master/2_assembly_genotyping_and_filtering/HWE_filtering.ipynb) to identify SNPs out of HWE. Below, I read in the file with the SNP names to keep, so that I could use ``vcftools`` to filter.\n"
    ]
   },
   {
@@ -771,7 +782,6 @@
    "outputs": [],
    "source": [
     "# first, get positions file to feed VCF, to get MAF for just SNPs in HWE\n",
-    "\n",
     "HWE_loci = []\n",
     "HWE_loci_F = open(\"primSNPs_CGmox_noINDL_mac5_mQ20_mDP10_289i_maf05_md70_inam_norep_HWE_loci_to_keep.txt\",\"r\")\n",
     "for line in HWE_loci_F:\n",
@@ -802,6 +812,13 @@
    ],
    "source": [
     "HWE_loci[0:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For ``vcftools``, we need the contig name and position to be in different columns. "
    ]
   },
   {
@@ -848,7 +865,12 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -899,9 +921,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **[7]** Convert to Genepop for last filtering steps\n",
+    "\n",
+    "- converted to Genepop with PGD Spider\n",
+    "- added informative SNP names using [this notebook](https://github.com/nclowell/RAD_sea_cucumbers/blob/master/2_assembly_genotyping_and_filtering/add_locus_names.ipynb) (added \"inam\" to file name)\n",
+    "- manually removed reps and add \"pops\" back into genepop file (added \"noreps\" to file name) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **[8]** One SNP per RAD tag\n",
+    "\n",
+    "Pick one SNP per contig, one with highest MAF.\n",
+    "\n",
+    "First need to get allele frequencies using ``vcftools``.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -972,6 +1021,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Store allele frequency information in a dictionary, where key = contig and value = another dictionary, where the nested dictionary has key = position of the SNP and value = the minor allele frequency"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
@@ -982,7 +1038,7 @@
     "contig_names = []\n",
     "locus_names = []\n",
     "for line in af_file:\n",
-    "    if line.startswith(\"CHR\") == False:\n",
+    "    if line.startswith(\"CHR\") == False: # for line that isn't header\n",
     "        linelist = line.strip().split()\n",
     "        contig = linelist[0]\n",
     "        contig_names.append(contig)\n",
@@ -1024,6 +1080,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# make a dictionary that retains only the SNP with the highest MAF per contig\n",
     "oneSNP_hiMAF_dict = {}\n",
     "for contig in contig_names:\n",
     "    highest_MAF = 0\n",
@@ -1053,6 +1110,13 @@
    ],
    "source": [
     "len(oneSNP_hiMAF_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write to file the names of the SNPs to keep, then use [this script](https://github.com/nclowell/RAD_sea_cucumbers/blob/master/2_assembly_genotyping_and_filtering/subset_GP_forloci.py) to subset the genepop file for only these SNPs."
    ]
   },
   {
@@ -1105,13 +1169,6 @@
     "-l oneSNP_hiMAF_keepnames.txt \\\n",
     "-o primSNPs_CGmox_noINDL_mac5_mQ20_mDP10_289i_maf05_md70_inam_norep_HWE_oneSNPhiMAF.gen"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
